# bladerf-gps-spoofer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  references.md
bladerf/: CMakeLists.txt
bladerf/include/: bladerf_tx.hpp
bladerf/src/: bladerf_tx.cpp
core/: CMakeLists.txt
core/include/: ca_code.hpp  ephemeris.hpp  iq_stream.hpp  modulator.hpp  nav_message.hpp
core/src/: ca_code.cpp  ephemeris.cpp  iq_stream.cpp  modulator.cpp  nav_message.cpp
docs/: index.html  learn.html  references.md
tests/: CMakeLists.txt  test_ca_code.cpp  test_ephemeris.cpp  test_iq_stream.cpp  test_modulator.cpp  test_nav_message.cpp
